<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CHAT</string>
    <string name="action_settings">Préférences</string>
    <string name="action_account">Mon Compte</string>
    <string name="titre">L4SI-Chat !</string>
    <string name="login">Pseudo</string>
    <string name="passe">Mot de passe</string>
    <string name="connection">Se connecter</string>
    <string name="ok">OK</string>
    <string name="monCompte">Mon Compte</string>
    <string name="couleur">Couleur Préférée : </string>
    <string name="choixConversation">Conversations</string>
    <string name="conversation">Conversation</string>
    <string name="preferences">Préférences</string>
    <string name="remember">Se souvenir de moi : </string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_compte">Compte</string>
    <string name="title_activity_choix_conversation">ChoixConversation</string>
    <string name="title_activity_show_conversation">ShowConversation</string>

    <string-array name="couleurs">
        <item>red</item>
        <item>green</item>
        <item>blue</item>
    </string-array>

    <string name="title_activity_choix_conv">ChoixConvActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_hint">Aa</string>

</resources>