<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/compte_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/monCompte"
        android:textColor="@color/colorPrimary"
        android:textSize="20pt"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/compte_edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLines="1">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/compte_edtPasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passe"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/compte_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/couleur"
            android:textColor="@color/secondaryTextColor" />

        <Spinner
            android:id="@+id/compte_listeAvatars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blanc"
            android:entries="@array/couleurs" />

    </LinearLayout>

    <Button
        android:id="@+id/compte_btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/ok" />

</LinearLayout>